monitoring/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ing
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "4m"
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.ton-domaine.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kpstack-grafana
            port:
              number: 80
